<resources>
    <string name="app_name">RentalProperty</string>
    <string name="home_logo">House Logo</string>
    <string name="welcome_message">Welcome on our rental service!</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_upload">Upload</string>
    <string name="bottom_navigation_menu_account">Account</string>

    <!-- FRAGMENT -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_login_main">LOGIN</string>
    <string name="fragment_home_main">HOME</string>
    <string name="fragment_upload_main">UPLOAD</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_google">Sign in with Google</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Failed to login! Please check your credentials"</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="register_now">New User? Register Now</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="invalid_form">All fields are required.</string>
    <string name="account_logo">Account Logo</string>
    <string name="register_message">Register Now !</string>
    <string name="action_register">Register</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_fname">First Name</string>
    <string name="email_required">Email is required!</string>
    <string name="fname_required">Firstname is required!</string>
    <string name="lname_required">Lastname is required!</string>
    <string name="password_required">Password is required!</string>
    <string name="incorrect_email">Please provide a valid email!</string>
    <string name="i_am_a_landlord">I am a landlord</string>
    <string name="register_success">User has been registered successfully!</string>
    <string name="register_failed">Failed to register! Try again!</string>
    <string name="login_success">Logged in successfully!</string>
    <string name="home_title">Recent publications</string>
    <string name="no_internet">No internet connection</string>
    <string name="password_too_short">Min password length should be 6 characters!</string>
    <string name="no_good">No good available..</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="full_name">Full Name</string>
    <string name="tenant">Tenant</string>
    <string name="landlord">Landlord</string>
    <string name="no_right_to_upload">You need to be a connected landlord to continue!</string>
    <string name="book_now">Book now</string>
    <string name="undolike">Like Removed</string>
    <string name="like">Liked</string>
    <string name="favorites">Favorites</string>
    <string name="load_more">Load more</string>
    <string name="all">All</string>
    <string name="results">Results</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_most_recent">Sort: Most recent</string>
    <string name="sort_older">Sort: Older</string>
    <string name="sort_increasing_prices">Sort: Increasing prices</string>
    <string name="sort_descending_prices">Sort: Descending prices</string>
    <string name="sort_ascending_prices">Sort: Ascending prices</string>
    <string name="adress">Full address</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="phone">Phone number</string>
    <string name="max_stay">Max day of stay</string>
    <string name="price_per_night">Price per night</string>
    <string name="pick_image">Pick Image</string>
    <string name="storage_perms_req">Storage permission is required...</string>
    <string name="house">House</string>
    <string name="studio">Studio</string>
    <string name="appartment">Appartment</string>
    <string name="title_required">Title is required</string>
    <string name="price_required">Price required!</string>
    <string name="phone_invalid">Invalid phone number</string>
    <string name="phone_required">Phone number required!</string>
    <string name="description_toolong">Description should not be longer than 250 characters!</string>
    <string name="description_required">Description required!</string>
    <string name="category_required">Category required!</string>
    <string name="address_required">Address required!</string>
    <string name="location_required">Location required!</string>
    <string name="title_toolong">Title is too long!</string>
    <string name="please_wait">Please wait</string>
    <string name="adding_place">Adding place...</string>
    <string name="added_place">Place added</string>
    <string name="choose_dates">Choose dates</string>
    <string name="credit_card">Credit card</string>
    <string name="next">Next</string>
    <string name="time_of_stay">"Time of stay : "</string>
    <string name="arrival">"Arrival : "</string>
    <string name="departure">"Departure : "</string>
    <string name="days">days</string>
    <string name="max_stay_reached">Host does not authorize stays of more than</string>
    <string name="price_total">Total price</string>
    <string name="book">book</string>
    <string name="min_stay_reached">Can not stay for less than one day</string>
    <string name="credit_card_required">Credit card required!</string>
    <string name="added_book">Reservation done</string>
    <string name="bookings">Bookings</string>
    <string name="from">From : </string>
    <string name="to">"To : </string>
    <string name="sure_delete_book">Are you sure you want to delete your reservation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted_ad">The ad has been deleted</string>
    <string name="deleted_book">Your reservation has been deleted</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="sure_delete_ad">Are you sure you want to delete your ad?</string>
    <string name="logged_to_continue">You have to be logged to continue!</string>
    <string name="edit_fullname">Edit your fullname</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="update_success">Updated successfully</string>
    <string name="update_fail">Update failed, try again</string>
    <string name="edit_email">Edit your email</string>
    <string name="confirm_password">Confirm your password to continue</string>
    <string name="wrong_password">Wrong password, try again</string>
</resources>