<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bottom_navigation_menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upload"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/bottom_navigation_menu_upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/bottom_navigation_menu_account"
        app:showAsAction="ifRoom" />
</menu>