<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

  <View
      android:id="@+id/topView"
      android:layout_width="match_parent"
      android:layout_height="70dp"
      android:background="@color/green_500"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <View
      android:id="@+id/waveView"
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:background="@drawable/wave"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/topView" />

  <ImageView
      android:id="@+id/accountLogoImageView"
      android:layout_width="63dp"
      android:layout_height="61dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:contentDescription="@string/account_logo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_baseline_account" />

  <TextView
      android:id="@+id/registerTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="50dp"
      android:layout_marginRight="50dp"
      android:text="@string/register_message"
      android:textColor="@color/white"
      android:textSize="36sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@+id/accountLogoImageView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/topView" />


  <EditText
      android:id="@+id/inputRegisterEmail"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:background="@drawable/round_border"
      android:drawableStart="@drawable/ic_email"
      android:drawableLeft="@drawable/ic_email"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="@string/prompt_email"
      android:inputType="text"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/waveView" />

  <EditText
      android:id="@+id/inputRegisterFName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:background="@drawable/round_border"
      android:drawableStart="@drawable/ic_baseline_account_circle_24"
      android:drawableLeft="@drawable/ic_baseline_account_circle_24"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="@string/prompt_fname"
      android:inputType="text"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inputRegisterEmail" />

  <EditText
      android:id="@+id/inputRegisterLName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:background="@drawable/round_border"
      android:drawableStart="@drawable/ic_baseline_account_circle_24"
      android:drawableLeft="@drawable/ic_baseline_account_circle_24"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="@string/prompt_lname"
      android:inputType="text"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inputRegisterFName" />

  <EditText
      android:id="@+id/inputRegisterPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:background="@drawable/round_border"
      android:drawableStart="@drawable/ic_lock"
      android:drawableLeft="@drawable/ic_lock"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="@string/prompt_password"
      android:inputType="textPassword"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inputRegisterLName" />

  <CheckBox
      android:id="@+id/inputRegisterLandlord"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:padding="16dp"
      android:text="@string/i_am_a_landlord"
      android:button="@drawable/round_checkbox"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inputRegisterPassword" />


  <Button
      android:id="@+id/buttonRegisterSubmit"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:background="@drawable/round_bg"
      android:text="@string/action_register"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inputRegisterLandlord" />

</androidx.constraintlayout.widget.ConstraintLayout>