<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/square_round_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Book Place"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/book_round_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_border"
                android:backgroundTint="@color/green_200">

                <ImageView
                    android:id="@+id/book_round_imgview"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/green_500"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_baseline_home" />

            </RelativeLayout>

            <TextView
                android:id="@+id/book_calendar_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:hint="@string/choose_dates"
                android:layout_below="@+id/book_round_img" />

            <TextView
                android:id="@+id/book_calendar_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                android:drawableRight="@drawable/ic_baseline_calendar_today_24"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:layout_below="@+id/book_calendar_button" />

            <EditText
                android:id="@+id/book_credit_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_baseline_credit_card_24"
                android:drawableLeft="@drawable/ic_baseline_credit_card_24"
                android:drawablePadding="10dp"
                android:inputType="number"
                android:padding="10dp"
                android:hint="@string/credit_card"
                android:layout_below="@+id/book_calendar_result" />

            <Button
                android:id="@+id/book_continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/book"
                android:minWidth="150dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/book_credit_card"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>